@@ -1,0 +1,90 @@
+/*
+ * Copyright (c) 2008-2010 David Muller <roxon@users.sourceforge.net>.
+ * All rights reserved. Use of the code is allowed under the
+ * Artistic License 2.0 terms, as specified in the LICENSE file
+ * distributed with this code, or available from
+ * http://www.opensource.org/licenses/artistic-license-2.0.php
+ */
+package org.pwsafe.passwordsafeswt.model;
+
+import java.util.Date;
+
+import org.apache.commons.logging.Log;
+import org.apache.commons.logging.LogFactory;
+import org.eclipse.jface.viewers.ILabelProviderListener;
+import org.eclipse.jface.viewers.ITableColorProvider;
+import org.eclipse.jface.viewers.ITableLabelProvider;
+import org.eclipse.swt.SWT;
+import org.eclipse.swt.graphics.Color;
+import org.eclipse.swt.graphics.Image;
+import org.eclipse.swt.widgets.Display;
+import org.pwsafe.lib.datastore.PwsEntryBean;
+
+/**
+ * Abstract label Provider for the password table and tree table, implementing common functionality.
+ *
+ * @author roxon
+ */
+public abstract class AbstractTableLabelProvider implements ITableLabelProvider, ITableColorProvider {
+	
+	private static final Log log = LogFactory.getLog(AbstractTableLabelProvider.class);
+	
+	private static final Date NOW = new Date();
+
+    /* (non-Javadoc)
+	 * @see org.eclipse.jface.viewers.ITableLabelProvider#getColumnImage(java.lang.Object, int)
+	 */
+	public Image getColumnImage(Object element, int columnIndex) {
+		return null;
+	} 
+	
+	/**
+	 * @see org.eclipse.jface.viewers.IBaseLabelProvider#addListener(org.eclipse.jface.viewers.ILabelProviderListener)
+	 */
+	public void addListener(ILabelProviderListener listener) {
+		// TODO Auto-generated method stub
+
+	}
+
+	/**
+	 * @see org.eclipse.jface.viewers.IBaseLabelProvider#dispose()
+	 */
+	public void dispose() {
+		// TODO Auto-generated method stub
+
+	}
+
+	/**
+	 * @see org.eclipse.jface.viewers.IBaseLabelProvider#isLabelProperty(java.lang.Object, java.lang.String)
+	 */
+	public boolean isLabelProperty(Object element, String property) {
+		// TODO Auto-generated method stub
+		log.debug("Property check: " + element + " " + property );
+		return false;
+	}
+
+	/* (non-Javadoc)
+	 * @see org.eclipse.jface.viewers.IBaseLabelProvider#removeListener(org.eclipse.jface.viewers.ILabelProviderListener)
+	 */
+	public void removeListener(ILabelProviderListener listener) {
+		// TODO Auto-generated method stub
+
+	}
+
+	public Color getBackground(Object element, int columnIndex) {
+		// TODO Auto-generated method stub
+		return null;
+	}
+
+	public Color getForeground(Object element, int columnIndex) {
+		if (element instanceof PwsEntryBean) {
+			final PwsEntryBean entry = (PwsEntryBean) element;
+			if (entry.getExpires() != null && NOW.after(entry.getExpires())) {
+				return Display.getCurrent().getSystemColor(SWT.COLOR_RED);
+			}
+		}
+		return null;
+	}
+
+
+}
